--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,13 @@
 @source "../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}";
 @custom-variant dark (&:is(.dark *));
 
-@layer base {
-    * {
+@layer utilities {
+    .thin-scrollbar {
         scrollbar-width: thin;
         scrollbar-color: rgba(100, 100, 100, 0.5) transparent;
     }
 
-    .dark * {
+    .dark .thin-scrollbar {
         scrollbar-width: thin;
         scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
     }
