--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
 @source "../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}";
 @custom-variant dark (&:is(.dark *));
 
+@layer base {
+    html {
+        @apply scroll-smooth;
+    }
+}
+
 @layer utilities {
     .thin-scrollbar {
         scrollbar-width: thin;
