feat: add disc tab detail

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,4 +21,8 @@
         scrollbar-width: thin;
         scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
     }
+
+    .font-exo {
+        font-family: var(--font-exo), sans-serif;
+    }
 }
